manifests/05_nginx-ingress/ingress-rule.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev.metakube.io
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - hosts:
    - dev.metakube.io
    secretName: tls-secret
  rules:
  - host: dev.metakube.io
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp-svc
          servicePort: http
